# dnsparser

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  test.sh
cmake/: cxx_flag_overrides.cmake  env_setup.cmake
include/: dnsparser.h
src/: CMakeLists.txt  cname_tracker.cpp  cname_tracker.h  dnsparse.cpp
test/: CMakeLists.txt  testdnsparse.cpp
